--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.alphadvlpr.infiniteminds">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
@@ -11,12 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/DarkAppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity
-            android:name=".users.EditUser"
-            android:screenOrientation="portrait"/>
-        <activity
-            android:name=".navigation.Home"
-            android:screenOrientation="portrait">
+        <activity android:name=".navigation.MainActivity"
+            android:screenOrientation="locked"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,54 +23,41 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".users.EditUser"
+            android:screenOrientation="locked" />
+        <activity
             android:name=".categories.CategoriesList"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="locked" />
         <activity
             android:name=".articles.EditArticle"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="locked" />
         <activity
             android:name=".articles.ArticlesList"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="locked" />
         <activity
             android:name=".users.UsersList"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".navigation.Search"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
-        <activity
-            android:name=".navigation.Info"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".navigation.Trending"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="locked" />
         <activity
             android:name=".users.NewUser"
-            android:screenOrientation="portrait"
+            android:screenOrientation="locked"
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".navigation.Profile"
-            android:screenOrientation="portrait"
+            android:screenOrientation="locked"
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".navigation.MainInterface"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".navigation.Login"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
+            android:screenOrientation="locked" />
         <activity
             android:name=".articles.NewArticle"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="locked" />
         <activity
             android:name=".navigation.Content"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="locked" />
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-2122172706327985~8237512049" />
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
